2009-02-19  Xan Lopez  <xan@gnome.org>

        * libsoup/soup-cookie-jar-sqlite.c:
        (callback):
        (try_create_table):
        (exec_query_with_try_create_table):
        (load):
        (changed):

        Fix a series of issues that prevented SoupCookieJarSQLite from working:

        - Try to create cookies table on errors. The table was never created before.
        - Store max_age in a gulong, not int.
        - Parse correctly boolean values from query. It's 0/1, not FALSE/TRUE.
	- The host is stored as host in the table, not as domain.

        #572409

2009-02-16  Dan Winship  <danw@gnome.org>

	* configure.in: 2.25.91

	* NEWS: update

2009-02-15  Dan Winship  <danw@gnome.org>

	* docs/reference/client-howto.xml: Updates: Mention
	SoupSessionFeature (and link to SoupLogger, SoupCookieJar, and
	SoupProxyResolverGNOME specifically). Mention forms and XML-RPC
	support. Mention header-parsing methods. Give a concrete example
	of connecting to SoupMessage signals. Document the (minimal)
	thread-safety guarantees

	* docs/reference/build-howto.xml: basic notes on pkg-config and
	#include usage.

2009-02-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager.c (authenticate_auth): Fix crash when
	getting a 407 when using SoupProxyResolverGNOME (or when not using
	any proxy). Launchpad bug #326099. (Note that this doesn't
	actually make proxy-auth-with-SoupProxyResolverGNOME *work*, it
	just makes it not crash.)

2009-02-02  Dan Winship  <danw@gnome.org>

	* configure.in: 2.25.5

	* NEWS: update

2009-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-proxy-resolver-gconf.h:
	* libsoup/soup-proxy-resolver-gconf.c: Remove this, as it was
	incomplete, and libproxy is now officially a dependency of GNOME.

	* libsoup/Makefile.am:
	* libsoup/soup-gnome-features.c: remove gconf-vs-libproxy ifdefs

	* configure.in: Remove GConf checks, require libproxy if building
	libsoup-gnome.

2009-01-29  Dan Winship  <danw@gnome.org>
